--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <script type="module" crossorigin src="/explorerlab/assets/index.afb5c4cb.js"></script>
+    <script type="module" crossorigin src="/explorerlab/assets/index.5f9929b2.js"></script>
     <link rel="stylesheet" href="/explorerlab/assets/index.ae9a6cd0.css">
   </head>
   <body>
@@ -126,7 +126,7 @@
           <div class="cc-extra">
             <div class="cc-expiration">
               <div class="label">Expiração</div>
-              <div class="value">02/32</div>
+              <div class="value">MM/YY</div>
             </div>
             <div class="cc-security">
               <div class="label">CVC</div>
